# tesi

./: autoGainTime.py  autoGainTimeExportVariableName.py  autoGainTimeExportVariableNameMicrosecond.py  ina219_data.csv
Client/output/: main
Client/src/: main.cpp
ConfigurazioneSenzaCS/: CMakeCache.txt  CMakeLists.txt  Makefile  bgvbase  cmake_install.cmake  main.cpp
Tesi_v2/: .gitignore  CMakeCache.txt  CMakeLists.txt  CalcoloConsumo.py  HEPowerConsumption  Makefile  SplineCubica.m  aes.csv  autoGainTimeExport.py  autoGainTimeExportAes.py  autoGainTimeExportAes.py.save  autoGainTimeExportBfv.py  autoGainTimeExportCkks.py  ckks.csv  cmake_install.cmake  datiPotenza.csv  elGamal.csv  encryption_data.csv  encryption_data_aes.csv  encryption_data_aes_2.csv  encryption_data_ckks.csv  encryption_data_ckks_2.csv  encryption_data_ckks_variazione_poly.csv  encryption_data_ckks_zstd_zlib.csv  ina219_data.csv  main.cpp  main.cpp.save  main.cpp.save.1  main.cpp.save.2  mainCopia.cpp  paillier.csv  paillier_performance_data.csv  sealInclude.h
Tesi_v2/libpaillier-0.8/: Makefile  README:Zone.Identifier  config.status
testServer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.d  testServer
testServer/output/: main
testServer/src/: main.cpp
